# Dashboard--Bureaux

./: .gitignore  README.md  app.py  bureau_equifax_us.py  requirements.txt
Dev Artifacts - US/: INTEGRATION.md  MANIFEST.md  README.md  pyproject.toml  requirements-integration.txt
Dev Artifacts - US/artifacts/: README.md
Dev Artifacts - US/artifacts/us_equifax_lr_l1/: coefficients.csv  feature_list.json  model_pipeline.joblib  policy.json  train_summary.json
Dev Artifacts - US/src/bureau_uw/: __init__.py  config.py  scoring_api.py
Dev Artifacts - US/src/bureau_uw/features/: __init__.py  feature_engineering.py
Dev Artifacts - US/src/bureau_uw/parsers/: __init__.py  equifax_feature_mapping.py  json_to_dict.py  xml_to_dict.py
static/: index.html  script.js  styles.css
