[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bureau-uw"
version = "0.1.0"
description = "Bureau XML underwriting decision pipeline"
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.2",
    "lxml>=4.9",
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.optional-dependencies]
# For training (scripts/train_lr_l1.py)
train = ["scikit-learn>=1.0"]
# For Streamlit dashboard and PDF/Excel export
dashboard = [
    "streamlit>=1.28",
    "plotly>=5.14",
    "reportlab>=4.0",
    "openpyxl>=3.0",
]
# Install everything: pip install -e ".[train,dashboard]"
all = ["bureau-uw[train,dashboard]"]

[tool.setuptools.packages.find]
where = ["src"]
